<resources>
    <string name="app_name">First aid Assistance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Have an account? Sign in</string>
    <string name="app_logo">First Aid App</string>
    <string name="blood_prompt">Blood Group</string>
    <string name="rhesus_prompt">Rhesus</string>
    <string name="gender_prompt">Gender</string>
    <string name="sign_up">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="login_page">FirstAid app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="choose_profile">Tap on the Camera to choose profile picture</string>
    <string name="button_save">Save</string>
    <string name="accident">Accidents and Emergencies</string>
    <string name="kit">Firstaid kit</string>
    <string name="blood">Blood Donation</string>
    <string name="forum">User forum</string>
    <string name="share">Share</string>
    <string name="logout">Log out</string>
    <string name="contacts">Emergency Contacts</string>
    <string name="options">Options</string>
    <string name="map">Near me</string>
    <string name="name">username</string>
    <string name="email_user">useremail@gmail.com</string>
    <string name="fragment">Accidents Fragment</string>
    <string name="firstname">Food Poisoning</string>
    <string name="image_description">

       <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        Food poisoning is an illness caused by eating contaminated food.
        It\'s not usually serious and most people get better within a few days without treatment.
        In most cases of food poisoning, the food is contaminated by bacteria.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
        The symptoms of food poisoning usually begin within one to two days of eating contaminated food,
        although they may start at any point between a few hours and several weeks later.
       The main symptoms include:\n
        feeling sick (nausea)\n
        vomiting\n
        diarrhoea, which may contain blood or mucus\n
        stomach cramps and abdominal (tummy) pain\n
        a lack of energy and weakness\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        Sipping soda may help prevent vomiting.
        Don\’t eat fried, greasy, spicy, or sweet foods.
        Don\’t take anti-nausea or anti-diarrhea medication without asking your doctor.
        They may make some kinds of diarrhea worse.
        Your doctor may give you anti-nausea medication if you are at risk of being dehydrated. </string>
    <string name="asthma">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        Asthma is a common long-term condition that can cause coughing, wheezing, chest tightness and breathlessness.
        The severity of these symptoms varies from person to person.
        Asthma can be controlled well in most people most of thetime,
        although some people may have more persistent problems.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
         Coughing, especially at night
          Wheezing
          Shortness of breath
          Chest tightness, pain, or pressure\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        Sit the person upright comfortably and loosen tight clothing. If the person has asthma medication,
        such as an inhaler, assist in using it.
        If the person doesn\'t have an inhaler, use one from a first aid kit.

    </string>
    <string name="heat_stroke">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        Heat stroke, also known as sun stroke, is a type of severe heat illness that results in a body temperature greater than 40.0 °C (104.0 °F)
        and confusion.
        Other symptoms include red, dry or damp skin, headache, and dizziness. Onset can be sudden or gradual.\n

        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
        Throbbing headache.
        Dizziness and light-headedness.
       Lack of sweating despite the heat.
        Red, hot, and dry skin.
       Muscle weakness or cramps.
       Nausea and vomiting.
      Rapid heartbeat, which may be either strong or weak.
       Rapid, shallow breathing.\n

        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
      Cool the person\'s entire body by sponging or spraying cold water, and fan the person to help lower the person\'s body temperature.
        Watch for signs of rapidly progressing heatstroke,
        such as seizure, unconsciousness for longer than a few seconds, and moderate to severe difficulty breathing.
    </string>
    <string name="nose_bleed">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        The most common cause of anterior nosebleeds is dry air. A dry climate or heated indoor air irritates and dries out nasal membranes,
        causing crusts that may itch and then bleed when scratched or picked.
        Colds may also irritate the lining of the nose. Bleeding may occur after repeated blowing.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
        Excess blood loss may cause dizziness and fainting, confusion, loss of alertness and light-headedness. However, the condition is rare.
        Bleeding from other body parts like teeth, gums, nostrils, etc. indicate inability of blood to clot.\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        Reassure the person, especially children, as crying increases blood flow. Sit the person up straight and drop their head slightly forward.
        Apply finger and thumb pressure on the soft part of nostrils below the bridge of the nose for at least 10 minutes.\n
    </string>
    <string name="snake_bite">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        A snakebite is an injury caused by the bite of a snake, especially a venomous snake.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
            two puncture wounds.
    swelling and redness around the wounds.
    pain at the bite site.
    difficulty breathing.
    vomiting and nausea.
    blurred vision.
    sweating and salivating.
    numbness in the face and limbs.\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        Apply a pressure immobilisation bandage and keep the person calm and as still as possible until medical help arrives. Avoid washing the bite area because any venom left on the skin can help identify the snake.
        DO NOT apply a tourniquet, cut the wound or attempt to suck the venom out.\n
    </string>
    <string name="stroke">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        Stroke is a disease that affects the arteries leading to and within the brain.
         It occurs when a blood vessel that carries oxygen and nutrients to the brain is either blocked by a clot or bursts (or ruptures).\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
            Sudden numbness or weakness of face, arm, or leg, especially on one side of the body.
    Sudden confusion, trouble speaking or understanding speech.
    Sudden trouble seeing in one or both eyes.
    Sudden trouble walking, dizziness, loss of balance or coordination.
    Sudden severe headache with no known cause.\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        Stay as calm as possible while waiting for emergency help. If you\'re caring for someone else having a stroke,
        make sure they\'re in a safe, comfortable position. Preferably, this should be lying on one side with their head slightly raised and supported in case they vomit.
        Check to see if they\'re breathing.\n
    </string>
    <string name="heart_attack">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        A heart attack occurs when a coronary artery becomes suddenly blocked, stopping the flow of blood to the heart muscle and damaging it.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
            Pressure, tightness, pain, or a squeezing or aching sensation in your chest or arms that may spread to your neck, jaw or back.
    Nausea, indigestion, heartburn or abdominal pain.
    Shortness of breath.
    Cold sweat.
    Fatigue.
    Lightheadedness or sudden dizziness.\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        If you think someone is having a heart attack: Have the person sit down, rest, and try to keep calm. Loosen any tight clothing. Ask if the person takes any chest pain medicine, such as nitroglycerin,
        for a known heart condition, and help them take it.\n
    </string>
    <string name="epilepsy">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        Epilepsy is characterized by unpredictable seizures and can cause other health problems. Epilepsy is a spectrum condition with a wide range of seizure types and control varying from person-to-person.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
        Seizure signs and symptoms may include: Temporary confusion. A staring spell.Psychic symptoms such as fear, anxiety or deja vu.\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        First aid for seizures is aimed at keeping the person safe until the seizure stops on its own. Stay calm, loosen anything around the person\'s neck, do not restrain them or put anything in their mouth, clear the area around them,
        and stay with them after the seizure stops.\n
    </string>
    <string name="labor_signs">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        Pain during labor is caused by contractions of the muscles of the uterus and by pressure on the cervix. This pain can be felt as strong cramping in the abdomen, groin, and back, as well as an achy feeling.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
          Cervix dilates.
Cramps and increased back pain.
Loose-feeling joints.
Diarrhea.
Weight gain stops.
Fatigue and \"nesting instinct\"
Vaginal discharge changes color and consistency.\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
        Support the mother as she delivers the afterbirth. Keep the placenta and the umbilical cord intact, do not cut the cord. If there is severe pain or bleeding, treat for shock. Help the mother to lie down and raise her legs and keep her warm.\n
    </string>
    <string name="strains">
        <u><b><font fgcolor='#1D8ECE'>About</font></b></u>\n
        Sprains and strains both refer to damage to the soft tissues in the body, including ligaments, tendons, and muscles. People can often treat sprains and strains at home. A sprain is an overstretched, torn, or twisted ligament.
        A ligament is a tough band of fibrous tissue that connects bones to other bones or cartilage.\n
        <u><b><font fgcolor='#1D8ECE'>Signs and symptoms</font></b></u>\n
            Pain.
    Swelling.
    Bruising.
    Limited ability to move the affected joint.
    Hearing or feeling a \"pop\" in your joint at the time of injury.\n
        <u><b><font fgcolor='#1D8ECE'>What to do</font></b></u>\n
         Rest the injured part until it\'s less painful. Ice: Wrap an icepack or cold compress in a towel and place over the injured part immediately.Compression: Support the injured part with an elastic compression bandage for at least 2 days.
        Elevation: Raise the injured part above heart level to decrease swelling.
    </string>
</resources>