<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accident"
            android:icon="@drawable/accident"
            android:title="@string/accident" />

        <item
            android:id="@+id/nav_kit"
            android:icon="@drawable/aidkit"
            android:title="@string/kit" />


        <item
            android:id="@+id/nav_near_me"
            android:icon="@drawable/maps"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/call"
            android:title="@string/contacts" />
    </group>
    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share"/>

            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/logout"
                android:title="@string/logout" />

        </menu>

    </item>

</menu>