<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/firsaidlogo"
            android:id="@+id/firstaid_logo"
            android:layout_marginTop="59dp"
            />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:text="@string/login_page"
            android:layout_below="@+id/firstaid_logo"
            android:textColor="@color/colorTextView"
            android:layout_centerHorizontal="true"
            android:textStyle="italic"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="0dp"
        >



        <EditText
            android:id="@+id/editTextEmail"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:hint="@string/email"
            android:textColorHint="@color/colorAccent"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextView"
            android:textSize="15sp"

            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email"
            />


        <EditText
            android:id="@+id/editTexPassword"
            android:background="@drawable/rounded_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:hint="@string/password"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorTextView"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_password"
            />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="@string/sign_in_button"
            android:textColor="@color/colorSplashText"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorTextView"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_gravity="start"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorTextView"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_gravity=""
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>






</RelativeLayout>