<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/logo_view"
            >
            <ImageView
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/firsaidlogo"
                android:id="@+id/firstaid_logo"
                android:layout_marginTop="59dp"
                />
            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="2dp"
                android:text="@string/login_page"
                android:layout_below="@+id/firstaid_logo"
                android:textColor="@color/colorTextView"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                />
        </RelativeLayout>

         <EditText
             android:layout_margin="14dp"
             android:inputType="textPersonName"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:id="@+id/editTextName"
             android:hint="Username"
             android:textColorHint="@color/colorAccent"
             android:textColor="@color/colorTextView"
             android:textSize="15sp"
             android:background="@drawable/rounded_edittext"
             android:drawableLeft="@drawable/ic_person"
             android:drawablePadding="5dp"
             android:drawableStart="@drawable/ic_person"
             />



        <EditText
            android:layout_margin="14dp"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/editTextEmail"
            android:hint="Email address"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorTextView"
            android:textSize="15sp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email"
            />

        <EditText
            android:layout_margin="14dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/editTexPassword"
            android:hint=" Password"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorTextView"
            android:textSize="15sp"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_password"
            />


        <Button
            android:layout_margin="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            android:id="@+id/buttonRegister"
            android:textColor="@color/colorSplashText"
            android:background="@drawable/rounded_button"
            />
        <TextView
            android:textAlignment="center"
            android:id="@+id/textViewSignIn"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextView"
            android:textStyle="bold"
            android:textSize="14sp"
            />
    </LinearLayout>



</ScrollView>